@@ -1,5 +1,11 @@
 2007-11-20  Vladimir Prus  <vladimir@codesourcery.com>
 
+	* infrun.c (resume): Clarify logic that
+	decides if a single thread must be resumed. Add
+	comments.
+
+2007-11-20  Vladimir Prus  <vladimir@codesourcery.com>
+
 	* breakpoint.c (disable_breakpoints_in_unloaded_shlib):
 	Make static.
 
